AppChooserDialog: Show NoDisplay services

BUG: 510546